소장품 등록/수정 페이지에 작가/작품 검색 적용, 거래내역 거래상세 페이지 1차, 2차, 판매자 결제 내역 추가,

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -146,6 +146,11 @@
 											</div>
 										</td>
 									</tr>
+									<!-- <tr class="t-red" id="tr_bidPrc">
+										<th>
+											<div class="tsc-2"><img src="resources/img/de/check-on.jpg" /><span>정산받을 계좌번호</span></div>
+										</th>
+									</tr> -->
 								</table>
 							</li>
 						</ul>
