--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -4154,11 +4154,11 @@ code{
 .check-info{
     display: inline-block;
     vertical-align: top;
-    font-size: 13px;
+    /* font-size: 13px; */
     color: #999999;
 }
-.check-info p{
-    padding-bottom: 5px;
+.check-info div{
+    /* padding-bottom: 5px; */
     font-weight: 600;
     color: #333333;
 }
