--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -4224,7 +4224,7 @@ code{
     font-size: 2.2rem;
     color: #999999;
 }
-.check-info p{
+.check-info div{
     padding-bottom: 5px;
     font-weight: 600;
     color: #333333;
