회원가입 : 광고 마케팅 수신동의 처리

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -388,11 +388,11 @@
 	  
 	    /* 두번째 배너  */    	  
 	       	  
-	   window.addEventListener('resize', function() {
-			ww = window.innerWidth;
-			responsiveSwiper();
-			responsiveSwiperIn();
-		});
+// 	   window.addEventListener('resize', function() {
+// 			ww = window.innerWidth;
+// 			responsiveSwiper();
+// 			responsiveSwiperIn();
+// 		});
 		  	
 	       	
 	  /* 메뉴바 FIXED */
@@ -413,20 +413,20 @@
 	  var timer = null;
 	
 	  //Javascript
-	  window.addEventListener('resize', function(){
-	  	clearTimeout(timer);
-	  	timer = setTimeout(function(){
-	  		document.location.reload();
-	  	}, delay);
-	  });
+// 	  window.addEventListener('resize', function(){
+// 	  	clearTimeout(timer);
+// 	  	timer = setTimeout(function(){
+// 	  		document.location.reload();
+// 	  	}, delay);
+// 	  });
 	
 	  //jQuery
-	  $(window).on('resize', function(){
-	  	clearTimeout(timer);
-	  	timer = setTimeout(function(){
-	  		document.location.reload();
-	  	}, delay);
-	  });
+// 	  $(window).on('resize', function(){
+// 	  	clearTimeout(timer);
+// 	  	timer = setTimeout(function(){
+// 	  		document.location.reload();
+// 	  	}, delay);
+// 	  });
 	  
       /* 메뉴바 FIXED */
       if (jQuery(window).width() > 0) {
